--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="#">My Beautiful Website</a>
+            <a class="navbar-brand" href="#">Hi checking live website</a>
         </div>
     </nav>
 
