--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Google Sheet Link</h5>
+                        <h5 class="card-title">Google Github Link</h5>
                         <p class="card-text">Click below to access a useful Google Sheet.</p>
                         <a href="https://docs.google.com/spreadsheets/d/your-google-sheet-id" target="_blank" class="btn btn-primary">Open Google Sheet</a>
                     </div>
