--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Google Github Link</h5>
-                        <p class="card-text">Click below to access a useful Google Sheet.</p>
-                        <a href="https://docs.google.com/spreadsheets/d/your-google-sheet-id" target="_blank" class="btn btn-primary">Open Google Sheet</a>
+                        <h5 class="card-title">Swayam Course </h5>
+                        <p class="card-text">Can access course durations and credit card by mentioning url</p>
+                        <a href="https://colab.research.google.com/drive/16nvEXDFEfkuZLxrPY5vq1lsNFZiTYVJ6?usp=sharing" target="_blank" class="btn btn-primary">Open Google Sheet</a>
                     </div>
                 </div>
             </div>
